--- a/config/packages/dev/framework.yaml
+++ b/config/packages/dev/framework.yaml
@@ -1,3 +1,6 @@
+parameters:
+  cache_adapter: 'cache.adapter.filesystem'
+
 framework:
   cache:
-    app: cache.adapter.filesystem
+    app: '%cache_adapter%'
