--- a/config/packages/nexy_slack.yaml
+++ b/config/packages/nexy_slack.yaml
@@ -4,7 +4,8 @@ nexy_slack:
     client: httplug.client
 
   # The Slack API Incoming WebHooks URL.
-  endpoint:             'https://hooks.slack.com/services/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'
+#  endpoint:             'https://hooks.slack.com/services/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'
+  endpoint:             '%env(SLACK_WEBHOOK_ENDPOINT)%'
   channel:              null
   username:             null
   icon:                 null
