--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "4.2.*",
         "symfony/twig-bundle": "4.2.*",
-        "symfony/yaml": "4.2.*"
+        "symfony/yaml": "4.2.*",
+      "ext-json": "*"
     },
     "config": {
         "preferred-install": {
@@ -65,6 +66,7 @@
     "require-dev": {
         "easycorp/easy-log-handler": "^1.0.7",
         "symfony/debug-bundle": "*",
+        "symfony/maker-bundle": "^1.11",
         "symfony/monolog-bundle": "^3.0",
         "symfony/stopwatch": "*",
         "symfony/twig-bundle": "*",
