--- a/.env
+++ b/.env
@@ -23,3 +23,10 @@ APP_SECRET=8f7c7f3fb14d64adde7d999098ed6e5b
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS='^localhost|example\.com$'
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
+# Configure your db driver and server_version in config/packages/doctrine.yaml
+DATABASE_URL=mysql://gurikin:@127.0.0.1:3306/symfony4_space_bar
+###< doctrine/doctrine-bundle ###
