--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
         "knplabs/knp-markdown-bundle": "^1.7",
         "sensio/framework-extra-bundle": "^5.3",
         "sensiolabs/security-checker": "^5.0",
@@ -13,9 +14,9 @@
         "symfony/dotenv": "4.2.*",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "4.2.*",
+        "symfony/orm-pack": "^1.0",
         "symfony/twig-bundle": "4.2.*",
-        "symfony/yaml": "4.2.*",
-      "ext-json": "*"
+        "symfony/yaml": "4.2.*"
     },
     "config": {
         "preferred-install": {
