--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -40,7 +40,7 @@ security:
   # Note: Only the *first* access control that matches will be used
   access_control:
     # but, definitely allow /login to be accessible anonymously
-    - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+    - { path: ^/login|register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
     # require the user to fully login to change password
     - { path: ^/change-password, roles: IS_AUTHENTICATED_FULLY }
     # if you wanted to force EVERY URL to be protected
